<resources>
    <string name="app_name">Storify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="from_overlogic_id">from Overlogic ID</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_up">Sign up</string>
    <string name="example_overlogic_id">example@overlogic.id</string>
    <string name="hint_password">••••••••</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already Have an Account</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="josumaru">Josumaru</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="email_is_not_valid">Email is not Valid</string>
    <string name="title_create">Create</string>
    <string name="desc_story_cover">Story Cover</string>
    <string name="desc_back">Back</string>
    <string name="details">Details</string>
    <string name="desc_image_cover">Image Cover</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="log_out">Log Out</string>
    <string name="loading">Loading</string>
    <string name="unexpected_error_occurred">Unexpected error occurred</string>
    <string name="failed_to_refresh">Failed to refresh</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="map">Map</string>
    <string name="retry">Retry</string>
    <string name="use_location">Use Location</string>
    <string name="converting">Converting...</string>
    <string name="please_insert_a_description">Please insert a description</string>
    <string name="uploading">Uploading...</string>
    <string name="error_creating_image_file">Error creating image file</string>
    <string name="no_image_selected">No image selected</string>
    <string name="failed_to_process_image">Failed to process image</string>
    <string name="failed_to_capture_image">Failed to capture image</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="location_is_not_found_try_again">Location is not found. Try Again</string>
</resources>