<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetailActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_back"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_back"
                android:padding="8dp"
                android:src="@drawable/ic_back"
                app:tint="@color/md_theme_onBackground" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_app_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/details"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/cv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cv_back" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_cover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="26dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_bar"
            tools:layout_editor_absoluteX="16dp">

            <ImageView
                android:id="@+id/iv_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_image_cover"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic" />

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_shadow"
            app:layout_constraintBottom_toBottomOf="@+id/cv_cover"
            app:layout_constraintTop_toTopOf="@+id/cv_cover" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:lines="1"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_cover"
            tools:text="@tools:sample/full_names" />


        <TextView
            android:id="@+id/tv_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
            tools:text="@tools:sample/full_names" />


        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/md_theme_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_title"
            tools:text="@tools:sample/lorem/random" />
        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:indeterminate="true"
            android:progressTint="@color/md_theme_primaryContainer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>